[gd_scene load_steps=9 format=3 uid="uid://bvrseqwr8eytr"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_1q0h5"]
[ext_resource type="Script" path="res://scripts/characterState.gd" id="3_jdgsp"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="26_o64at"]
[ext_resource type="PackedScene" uid="uid://cy2ewlewinwbv" path="res://media/logic/HitBox.tscn" id="27_tfmq8"]
[ext_resource type="PackedScene" uid="uid://cbaqvnlrwjidk" path="res://media/logic/HurtBox.tscn" id="28_hw38u"]
[ext_resource type="PackedScene" uid="uid://c5k34hfd8kc10" path="res://media/logic/PushBox.tscn" id="29_6i8xr"]

[sub_resource type="Animation" id="Animation_shwgu"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gq6wu"]
_data = {
"RESET": SubResource("Animation_shwgu")
}

[node name="Character" type="Node2D"]
script = ExtResource("1_1q0h5")

[node name="CharacterState" type="Node" parent="."]
script = ExtResource("3_jdgsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 100
texture_filter = 6
scale = Vector2(0.6, 0.6)
offset = Vector2(0, -370)
hframes = 4
vframes = 4
frame = 13

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_gq6wu")
}
script = ExtResource("26_o64at")

[node name="HitBoxes" type="Node2D" parent="."]

[node name="HitBox" parent="HitBoxes" instance=ExtResource("27_tfmq8")]
moveReactionOnHitGround = "hurtG"
damage = 12000
boxSize = Rect2i(150000, -200000, 300000, 300000)

[node name="HitBox2" parent="HitBoxes" instance=ExtResource("27_tfmq8")]

[node name="HitBox3" parent="HitBoxes" instance=ExtResource("27_tfmq8")]

[node name="HitBox4" parent="HitBoxes" instance=ExtResource("27_tfmq8")]

[node name="HitBox5" parent="HitBoxes" instance=ExtResource("27_tfmq8")]

[node name="HurtBoxes" type="Node2D" parent="."]

[node name="HurtBox" parent="HurtBoxes" instance=ExtResource("28_hw38u")]
boxSize = Rect2i(-50000, -165000, 250000, 320000)

[node name="HurtBox2" parent="HurtBoxes" instance=ExtResource("28_hw38u")]
boxSize = Rect2i(270000, -200000, 200000, 200000)

[node name="HurtBox3" parent="HurtBoxes" instance=ExtResource("28_hw38u")]

[node name="HurtBox4" parent="HurtBoxes" instance=ExtResource("28_hw38u")]

[node name="HurtBox5" parent="HurtBoxes" instance=ExtResource("28_hw38u")]

[node name="PushBox" parent="." instance=ExtResource("29_6i8xr")]
boxSize = Rect2i(0, -120000, 200000, 250000)
